workloads/frigate/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate-http
  namespace: default
spec:
  type: ClusterIP
  selector: {app: frigate}
  ports:
    - {name: http, port: 5000, targetPort: 5000}
