workloads/frigate/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: cams-ts-2143-https
  hostnames:
    - cams.ts.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frigate
          port: 5000
